# NiftyScallop

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: ImGUIHandler.h  NiftyApp.h  NiftyCalc.h  NiftyNum.h  NiftySVG.h  NiftyScallop.h  NiftyScallopApp.h  NiftyStik.h  NiftyStikSVGTemplates.h  NiftyStikTemplates.h  NiftyUtil.h
src/: ImGUIHandler.cpp  NiftStik.cpp  NiftyApp.cpp  NiftySVG.cpp  NiftyScallop.cpp  NiftyScallopApp.cpp  main.cpp
src/include/: NiftyScallopApp.h
