cmake_minimum_required(VERSION 3.24)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /ZI")
 
# Static runtime for MSVC
if(MSVC)
    foreach(flag_var
        CMAKE_C_FLAGS_RELEASE CMAKE_C_FLAGS_DEBUG
        CMAKE_CXX_FLAGS_RELEASE CMAKE_CXX_FLAGS_DEBUG)
        string(REPLACE "/MD" "/MT" ${flag_var} "${${flag_var}}")
    endforeach()
endif()

# Specify the project name
project(NiftyScallop)

include(FetchContent)
FetchContent_Declare(
    lunasvg
    GIT_REPOSITORY https://github.com/sammycage/lunasvg.git
    GIT_TAG master  # Specify the desired branch or tag
)
FetchContent_MakeAvailable(lunasvg)

FetchContent_Declare(
    glfw
    GIT_REPOSITORY https://github.com/glfw/glfw.git
    GIT_TAG latest
)
FetchContent_MakeAvailable(glfw)

find_package(imgui CONFIG REQUIRED)
find_package(glad CONFIG REQUIRED)
#find_package(NiftyLib CONFIG REQUIRED)

add_subdirectory(NiftyLib)

include_directories("src/include")

file(GLOB SOURCES "src/*.cpp")

add_executable(NiftyScallop ${SOURCES})

target_compile_definitions(NiftyScallop PRIVATE GLFW_STATIC)

if (WIN32)
    target_link_libraries(NiftyScallop PRIVATE opengl32 gdi32 user32 shell32)
endif()

target_link_libraries(NiftyScallop PRIVATE NiftyLib lunasvg::lunasvg imgui::imgui glfw glad::glad)